# sort_benchmarks

./: .gitignore  Cargo.toml  README.md  build.rs
benches/: insertion_sort.rs  selection_sort.rs
c_files/: sort_c.c  sort_c.h
results/C insertion_sort 10/base/: benchmark.json  estimates.json  raw.csv  tukey.json
results/C insertion_sort 10/new/: sample.json
results/C insertion_sort 10/report/: index.html
results/C insertion_sort 100/base/: estimates.json  raw.csv
results/C insertion_sort 100/new/: benchmark.json  sample.json  tukey.json
results/C insertion_sort 100/report/: index.html
results/C insertion_sort 1000/base/: estimates.json
results/C insertion_sort 1000/new/: benchmark.json  raw.csv  sample.json  tukey.json
results/C insertion_sort 1000/report/: index.html
results/C insertion_sort 10000/base/: benchmark.json  raw.csv
results/C insertion_sort 10000/new/: estimates.json  sample.json  tukey.json
results/C insertion_sort 10000/report/: index.html
results/C selection_sort 10/base/: raw.csv  sample.json  tukey.json
results/C selection_sort 10/change/: estimates.json
results/C selection_sort 10/new/: benchmark.json  estimates.json
results/C selection_sort 10/report/: index.html
results/C selection_sort 100/base/: benchmark.json  sample.json  tukey.json
results/C selection_sort 100/change/: estimates.json
results/C selection_sort 100/new/: estimates.json  raw.csv
results/C selection_sort 100/report/: index.html
results/report/: index.html
src/: bench.rs  lib.rs  macros.rs  sort.rs  tests.rs
(+184 files in other folders)
